# mcp-scorecard-server

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
src/mcp_scorecard_server/: __init__.py  server.py
