[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-scorecard-server"
version = "0.1.0"
description = "MCP server that lets AI models check trust scores for MCP servers before connecting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "gigabrain-observer" },
]
keywords = ["mcp", "trust", "security", "scorecard", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.2.0",
]

[project.urls]
Homepage = "https://mcp-scorecard.ai"
Repository = "https://github.com/gigabrainobserver/mcp-scorecard-server"

[project.scripts]
mcp-scorecard-server = "mcp_scorecard_server.server:main"
